Compile and use RGB and spectral kernels separately

--- a/intern/cycles/CMakeLists.txt
+++ b/intern/cycles/CMakeLists.txt
@@ -295,6 +295,10 @@ if(WITH_OPENIMAGEDENOISE)
   )
 endif()
 
+if(WITH_CYCLES_SPECTRAL_RENDERING)
+  add_definitions(-DWITH_SPECTRAL_RENDERING)
+endif()
+
 if(WITH_CYCLES_STANDALONE)
   set(WITH_CYCLES_DEVICE_OPENCL TRUE)
   set(WITH_CYCLES_DEVICE_CUDA TRUE)
